kubernetes_yaml/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\apps_project\kompose-windows-amd64.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\apps_project\kompose-windows-amd64.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_HOST
              value: postgres
            - name: POSTGRES_PASSWORD
              value: "1"
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_USER
              value: postgres
          image: flask_app
          name: flask-container
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
