kubernetes_yaml/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\apps_project\kompose-windows-amd64.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\apps_project\kompose-windows-amd64.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: nginx
          name: nginx-container
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: frontend-claim0
              readOnly: true
            - mountPath: /etc/nginx/conf.d
              name: frontend-claim1
      restartPolicy: Always
      volumes:
        - name: frontend-claim0
          persistentVolumeClaim:
            claimName: frontend-claim0
            readOnly: true
        - name: frontend-claim1
          persistentVolumeClaim:
            claimName: frontend-claim1
status: {}
