kubernetes_yaml/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\apps_project\kompose-windows-amd64.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\apps_project\kompose-windows-amd64.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres: "true"
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_CONFIG_SERVER_MODE
              value: "False"
            - name: PGADMIN_DEFAULT_EMAIL
              value: pgadmin4@pgadmin.org
            - name: PGADMIN_DEFAULT_PASSWORD
              value: admin
          image: dpage/pgadmin4
          name: pgadmin-container
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin
      restartPolicy: Always
      volumes:
        - name: pgadmin
          persistentVolumeClaim:
            claimName: pgadmin
status: {}
